--- a/proyecto/libelulas/static/index.css
+++ b/proyecto/libelulas/static/index.css
@@ -11,7 +11,7 @@ body {
   width: 100%;
 }
 
-.form-container {
+form {
   background-color: #fff;
   border-radius: 20px;
   box-shadow: 0 18px 9px 0 rgba(235, 236, 239, 0.64);
@@ -21,20 +21,18 @@ body {
   width:100%;
 }
 
-.form-container > .image-column {
+form > .image-column {
   flex-grow: 1;
 }
 
-.form-container > .form-column {
-  flex-grow: 2;
-}
 
-form {
+form > .form-column {
+  flex-grow: 2;
   display: flex;
   flex-direction: column;
 }
 
-form > .container-button {
+form  .container-button {
   align-self: flex-end;
   display: flex;
   justify-content: space-between;
@@ -66,17 +64,65 @@ form > .container-button {
 }
 
 .upload {
+  align-items: center;
   background-image: linear-gradient(to bottom, #ff7982, #ff78b8);
+  display: flex;
   height: 335px;
-  width: 335px;
+  justify-content: center;
   position:relative;
+  width: 335px;
 }
 
 .image-circle {
   border-radius: 50%;
 }
 
-.upload > .absolute-icons {
+
+.camera-icon {
+  max-width: 155px;
+  width: 100%;
+}
+
+.generic-photo {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.generic-photo > span {
+  color: #fff;
+  font-size: 1.1em;
+  letter-spacing: 29;
+}
+
+form  p {
+  display: flex;
+  flex-direction: column;
+}
+
+form  p > label {
+  color: #b4c0c6;
+  letter-spacing: 29;
+}
+
+form  p > input {
+  border: none;
+  border-bottom: 1px solid  #b4c0c6;
+  padding: 8px;
+}
+
+textarea {
+  border: solid 1px #b4c0c6;
+  border-radius: 20px;
+}
+
+.inputfile {
+  height: 100%;
+  visibility: hidden;
+  width:100%;
+}
+
+.absolute-icons {
   align-items: center;
   display: flex;
   flex-direction: column;
@@ -88,31 +134,4 @@ form > .container-button {
   position: absolute;
   right: 0;
   width: 100%;
-}
-
-.absolute-icons > .camera-icon {
-  max-width: 155px;
-  width: 100%;
-}
-
-.absolute-icons > span {
-  color: #fff;
-  font-size: 1.1em;
-  letter-spacing: 29;
-}
-
-form > p {
-  display: flex;
-  flex-direction: column;
-}
-
-form > p > label {
-  color: #b4c0c6;
-  letter-spacing: 29;
-}
-
-form > p > input {
-  border: none;
-  border-bottom: 1px solid  #b4c0c6;
-  padding: 8px;
 }
