--- a/proyecto/libelulas/jugadora/templates/jugadora/agregar_jugadora.html
+++ b/proyecto/libelulas/jugadora/templates/jugadora/agregar_jugadora.html
@@ -1,45 +1,36 @@
 {% extends "base.html" %}
 {% load staticfiles %}
 {% block main %}
-<form method="POST" novalidate action="/jugadora/agregar_jugadora/">
+<form method="POST" enctype="multipart/form-data" novalidate action="{% url 'jugadora:agregar_jugadora' %}">
   {% csrf_token %}
   <div class="image-column">
     <div class="image-circle upload">
       <div class="generic-photo">
         <img class="camera-icon" src="{% static 'media/photo-camera.svg' %}"/>
         <span>Agregar Foto</span>
+          {{ form.Imagen.errors }}
       </div>
       <div class="absolute-icons">
-        <input class="inputfile" type="file" name="Imagen" id="id_Imagen" required="">
+          {{ form.Imagen }}
+
       </div>
     </div>
   </div>
   <div class="form-column">
-    <!-- {{ form.as_p }} -->
-    <p>
-      <label for="id_Nombre">Nombre:</label>
-      <input type="text" name="Nombre" id="id_Nombre" maxlength="50" required="">
-    </p>
-    <p>
-      <label for="id_Apellido">Apellidos:</label>
-      <input type="text" name="Apellido" id="id_Apellido" maxlength="50" required="">
-    </p>
-    <p>
-      <label for="id_Nacimiento">Fecha de Nacimiento:</label>
-      <input type="date" name="Nacimiento" value="" id="id_Nacimiento" required="">
-    </p>
-    <p>
-      <label for="id_Numero">Número:</label>
-      <input type="number" name="Numero" id="id_Numero" required="">
-    </p>
-    <p>
-      <label for="id_Posicion">Posición:</label>
-      <input type="number" name="Posicion" id="id_Posicion" required="">
-    </p>
-    <p>
-      <label for="id_Notas">Comentarios:</label>
-      <textarea name="Notas" rows="10" id="id_Notas" cols="40" maxlength="150" required=""></textarea>
-    </p>
+
+      <p><label>{{ form.Nombre.label_tag }}</label>{{ form.Nombre }}</p>{{ form.Nombre.errors }}
+      <p><label>{{ form.Apellido.label_tag }}</label>{{ form.Apellido }}</p>{{ form.Apellido.errors }}
+      <p><label>{{ form.Nacimiento.label_tag }}</label>{{ form.Nacimiento }}</p>{{ form.Nacimiento.errors }}
+      <p><label>{{ form.Numero.label_tag }}</label>{{ form.Numero }}</p>{{ form.Numero.errors }}
+      <p><label>{{ form.Posicion.label_tag }}</label>{{ form.Posicion }}</p>{{ form.Posicion.errors }}
+      <p><label>{{ form.Notas.label_tag }}</label>{{ form.Notas }}</p>{{ form.Notas.errors }}
+
+
+
+
+
+
+
     <div class="container-button">
       <button class="cancel">Cancelar</button>
       <button class="submit" type="submit">Enviar</button>
