--- a/proyecto/libelulas/templates/base.html
+++ b/proyecto/libelulas/templates/base.html
@@ -1,7 +1,8 @@
-{% load staticfiles %}
 <!doctype html>
+{% load staticfiles %}
 <html>
   <head>
+    <title>Plan Libélula Desarrollo Integral</title>
     <link rel="stylesheet" href="{% static '/index.css' %}">
   </head>
   <body>
