Arreglar editar jugadora

--- a/proyecto/libelulas/jugadora/templates/jugadora/agregar_jugadora.html
+++ b/proyecto/libelulas/jugadora/templates/jugadora/agregar_jugadora.html
@@ -15,6 +15,7 @@
   {% csrf_token %}
   <div class="image-column">
     <div class="image-circle upload">
+      <img id="upload" class="upload-change"/> 
       <div class="generic-photo">
         <img class="camera-icon" src="{% static 'media/photo-camera.svg' %}"/>
         <span>Agregar Foto</span>
