--- a/proyecto/libelulas/templates/base.html
+++ b/proyecto/libelulas/templates/base.html
@@ -10,4 +10,6 @@
       {% block main %}{% endblock %}
     </div>
   </body>
+  <script type="text/javascript" src="{% static '/index.js' %}">
+  </script> 
 </html>
