--- a/proyecto/libelulas/static/index.css
+++ b/proyecto/libelulas/static/index.css
@@ -40,7 +40,7 @@ form  .container-button {
   display: flex;
   justify-content: space-between;
   margin-top: 2em;
-  width: 50%;
+  width: 45%;
 }
 
 .cancel {
@@ -92,6 +92,7 @@ form  .container-button {
   align-items: center;
   display: flex;
   flex-direction: column;
+  z-index: 1;
 }
 
 .generic-photo > span {
@@ -141,6 +142,7 @@ textarea {
   position: absolute;
   right: 0;
   width: 100%;
+  z-index: 2;
 }
 
 .messages {
@@ -175,4 +177,13 @@ select {
   list-style-type: none;
   padding: 0;
   margin-top: 0;
+}
+
+.upload-change {
+  position: absolute;
+  z-index: 0;
+  border-radius: 50%;
+  height: 100%;
+  overflow: hidden;
+  width: 100%;
 }
