--- a/proyecto/libelulas/jugadora/templates/jugadora/editar_jugadora.html
+++ b/proyecto/libelulas/jugadora/templates/jugadora/editar_jugadora.html
@@ -4,7 +4,7 @@
 {% block main %}
 {% if messages %}
 {% for message in messages %}
-  <div class="{{ message.tags }} messages">
+  <div class="{{ message.tags }} messages" id="message">
       <span class="">{{ message }}</span>
     {% endfor %}
   </div>
