--- a/proyecto/libelulas/equipo/templates/equipo/equipo_update.html
+++ b/proyecto/libelulas/equipo/templates/equipo/equipo_update.html
@@ -88,7 +88,8 @@
         <label>
           {{ form.hora.label_tag }}
         </label>
-        {{ form.hora }}
+
+        <input type="time" name="{{form.hora.html_name}}" required="" value='{{ form.hora.value|time:"H:i" }}' id="{{form.hora.id_for_label}}">
       </p>
       {{ form.hora.errors }}
     <div class="container-button">
