--- a/proyecto/libelulas/static/index.css
+++ b/proyecto/libelulas/static/index.css
@@ -19,7 +19,7 @@ form {
   border-radius: 20px;
   box-shadow: 0 18px 9px 0 rgba(235, 236, 239, 0.64);
   display: flex;
-  padding: 3.8em 9em 3.8em 4.75em;
+  padding: 3.8em 3em;
   max-width: 1024px;
   width:100%;
 }
@@ -175,4 +175,16 @@ select {
   list-style-type: none;
   padding: 0;
   margin-top: 0;
+}
+
+@media only screen and (max-width: 768px) {
+  .boton {
+    width: 30vw
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .boton {
+    width: 10vw
+  }
 }
