--- a/proyecto/libelulas/static/index.css
+++ b/proyecto/libelulas/static/index.css
@@ -39,12 +39,12 @@ form > .form-column {
   flex-direction: column;
 }
 
-form  .container-button {
+.form-column > .container-button {
   align-self: flex-end;
   display: flex;
   justify-content: space-between;
   margin-top: 2em;
-  width: 45%;
+  width: 60%;
 }
 
 .cancel {
@@ -118,7 +118,6 @@ form  p > label {
 form  p > input {
   border: none;
   border-bottom: 1px solid  #b4c0c6;
-  padding: 3px 0px 3px 0px;
 }
 
 textarea {
@@ -214,4 +213,3 @@ select {
     width: 10vw
   }
 }
-
