--- a/proyecto/libelulas/equipo/templates/equipo/equipo_detail.html
+++ b/proyecto/libelulas/equipo/templates/equipo/equipo_detail.html
@@ -1,87 +1,25 @@
 <!doctype html>
-
-<style type="text/css">
-  
-  span{
-    color: blue;
-  }
-</style>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title>Crear Equipo</title>
-  </head>
-
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">LOGO</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">¡Bienvenido Jonh!</B> <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Equipos <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Convocatoria</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Ligas</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Galería</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Organizadores</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Galería</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">
-<i class="material-icons">exit_to_app</i>
-</a>
-
-
-      </li>
-
-    </ul>
-  </div>
-</nav>
-
-
-
+<!doctype html>
+{% extends "base.html" %}
+{% load staticfiles %}
+{% block main %}
   <body>
-
-      <div class="container">
-  <!-- Content 
-
-
-<h1>Equipo</h1>
-<ul>
-{% for Equipo in object_list %}
-    <li>{{ Equipo.nombre }}</li>
-{% empty %}
-    <li>No articles yet.</li>
-{% endfor %}
-</ul>
-    here -->
-    <h1>Equipo</h1>
-<h2>{{object.nombre}}</h2>
-<h2>Representante: {{object.representante}}</h2>
+   <div class="container">
+      <div id="gansito">
+        <div class="row">
+          <div class="col s12">
+            <h1>Equipo: {{object.nombre}}</h1>
+          </div>
+        <div class="row">
+          <div class="col m4">
+            <h3>Logo</h3>
+            <img  width="150px" src="{{object.logo.url}}">
+        </div>
+            
+              <h2>Representante: {{object.representante}}</h2>
 <h3>Teléfono: {{object.telefono}}</h3>
 <h3>E-Mail: {{object.correo}}</h3>
-<h3>Logo</h3>
-<img src="{{object.logo.url}}">
+
 
 <h3>Color Local</h3>
 
@@ -155,23 +93,22 @@
 {% endif %}
 
    <h4>Hora:  {{ object.hora }}</h4>
+              
+            </div>
+            
+          </div>
+    
+
+
    
 </div>
-
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  </body>
-
+</div>
 
 
 
 
 </html>
-
+{% endblock %}
 
 
 
