--- a/proyecto/libelulas/static/index.css
+++ b/proyecto/libelulas/static/index.css
@@ -197,6 +197,12 @@ select {
   height: 65px;
   padding: 10px;
 }
+.logo-equipo {
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+}
 .navito {
   width: 100%;
   max-width: 1024px;
@@ -246,7 +252,6 @@ nav ul a {
   background-color: #fff;
   border-radius: 20px;
   box-shadow: 0 18px 9px 0 rgba(235, 236, 239, 0.64);
-  display: flex;
   padding: 3.8em 3em;
   max-width: 1024px;
   width:100%;
