--- a/proyecto/libelulas/jugadora/templates/jugadora/agregar_jugadora.html
+++ b/proyecto/libelulas/jugadora/templates/jugadora/agregar_jugadora.html
@@ -11,7 +11,7 @@
   </div>
 {% endif %}
 
-<form method="POST" enctype="multipart/form-data" novalidate action="{% url 'jugadora:agregar_jugadora' %}">
+<form class="container flex" method="POST" enctype="multipart/form-data" novalidate action="{% url 'jugadora:agregar_jugadora' %}">
   {% csrf_token %}
   <div class="image-column">
     <div class="image-circle upload">
