--- a/proyecto/libelulas/static/index.css
+++ b/proyecto/libelulas/static/index.css
@@ -23,9 +23,9 @@ form {
   border-radius: 20px;
   box-shadow: 0 18px 9px 0 rgba(235, 236, 239, 0.64);
   display: flex;
-  padding: 3.8em 3em;
   max-width: 1024px;
   width:100%;
+  padding-top: 10px;
 }
 
 form > .image-column {
@@ -57,6 +57,7 @@ form  .container-button {
   font-weight: bold;
   letter-spacing: 43;
   padding: 0.5em 2.37em 0.5em 2.37em;
+  margin-right: 10px;
 }
 
 .submit {
@@ -75,15 +76,16 @@ form  .container-button {
   align-items: center;
   background-image: linear-gradient(to bottom, #ff7982, #ff78b8);
   display: flex;
-  height: 335px;
+  height: 100%;
   justify-content: center;
   position:relative;
-  width: 335px;
+  width: 100%;
+  max-width: 250px;
 }
 
 .image-circle {
   border-radius: 50%;
-  margin-bottom: 8px;
+  margin-bottom: 8px;;
 }
 
 
@@ -95,7 +97,7 @@ form  .container-button {
 .generic-photo {
   align-items: center;
   display: flex;
-  flex-direction: column;
+  flex-direction: column;;
 }
 
 .generic-photo > span {
@@ -255,4 +257,16 @@ nav ul a {
   padding: 3.8em 3em;
   max-width: 1024px;
   width:100%;
+}
+
+.cancel:focus {
+  background-color: transparent;
+  border: solid 2px #ff7178;
+  border-radius: 50px;
+  box-shadow: 0 8px 6px 0 rgba(239, 239, 239, 0.47);
+  color: #ff7178;
+  cursor: pointer;
+  font-weight: bold;
+  letter-spacing: 43;
+  padding: 0.5em 2.37em 0.5em 2.37em;
 }
