--- a/proyecto/libelulas/templates/base.html
+++ b/proyecto/libelulas/templates/base.html
@@ -25,6 +25,7 @@
     $(document).ready(function(){
       $('select').formSelect();
       $('.sidenav').sidenav();
+      $('.timepicker').timepicker();
     });
     </script>
   </body>
