--- a/proyecto/libelulas/jugadora/templates/jugadora/editar_jugadora.html
+++ b/proyecto/libelulas/jugadora/templates/jugadora/editar_jugadora.html
@@ -76,7 +76,7 @@
       </p>
       {{ form.Notas.errors }}
     <div class="container-button">
-      <button class="cancel">Cancelar</button>
+      <div class="cancel">Cancelar</div>
       <button class="submit" type="submit">Enviar</button>
     </div>
   </div>
