--- a/proyecto/libelulas/static/index.css
+++ b/proyecto/libelulas/static/index.css
@@ -224,8 +224,9 @@ select {
 }
 .logo-equipo {
   border-radius: 50%;
+  max-width: 12em;
   width: 100%;
-  height: 100%;
+  height: 12em;
   padding: 10px;
 }
 .navito {
@@ -283,8 +284,8 @@ nav ul a {
 }
 
 .img-icons{
-  max-width: 5em;
-  max-height: 5em;
+  max-width: 6.5em;
+  max-height: 6.5em;
   height: 100%;
 }
 
@@ -294,4 +295,32 @@ nav ul a {
 
 .no-pad {
   padding: 0 !important;
+}
+
+.tab-row {
+  padding-bottom: 2em;
+}
+p {
+  color: #b4c0c6;
+}
+
+.medium {
+  font-size:2.4em !important;
+}
+
+.icon-red {
+  color: #ff7178;
+}
+
+.icon-blue {
+  color: #67bbff;
+}
+
+.vertical-align-center {
+  display: flex;
+  align-items: center;
+}
+
+.red-background {
+  background-image: linear-gradient(to bottom, #ff7a80, #ff78be);
 }
