Arreglar template equipo

--- a/proyecto/libelulas/equipo/templates/equipo/equipo_detail.html
+++ b/proyecto/libelulas/equipo/templates/equipo/equipo_detail.html
@@ -64,7 +64,7 @@
             </div>
           {% else %}
           <div class="col s2 center-align">
-            <img class="circle img-icons" src="{% static 'media/default.jpg' %}" />
+            <img class="circle img-icons" src="{% static 'static_media/default.jpg' %}" />
           </div>
           {% endif %}
           <div class="col s6">
@@ -97,8 +97,7 @@
             </a>
             </div>
           </div>
+          {% endfor %}
         </div>
-      {% endfor %}
     </div>
-  </div>
 {% endblock %}
