--- a/proyecto/libelulas/equipo/templates/equipo/agregar_equipo.html
+++ b/proyecto/libelulas/equipo/templates/equipo/agregar_equipo.html
@@ -18,7 +18,7 @@
     <div class="image-circle upload">
       <img id="upload" class="upload-change"/>
       <div class="generic-photo">
-        <img class="camera-icon" src="{% static 'media/photo-camera.svg' %}"/>
+        <img class="camera-icon" src="{% static 'static_media/photo-camera.svg' %}"/>
         <span>Agregar Logo</span>
       </div>
       <div class="absolute-icons">
