--- a/proyecto/libelulas/equipo/templates/equipo/equipo_update.html
+++ b/proyecto/libelulas/equipo/templates/equipo/equipo_update.html
@@ -11,18 +11,18 @@
   </div>
 {% endif %}
 
-    <form  action="{% url 'equipo:editar_equipo' equipo.id %}" method="POST" enctype="multipart/form-data">`
+<form  class="container flex" action="{% url 'equipo:editar_equipo' equipo.id %}" method="POST" enctype="multipart/form-data">
   {% csrf_token %}
   <div class="image-column">
     <div class="image-circle upload">
+      <img class="upload-change" src="{{ equipo.logo.url }}" />
       <img id="upload" class="upload-change"/>
       <div class="generic-photo">
-        <img class="camera-icon" src="{% static 'media/photo-camera.svg' %}"/>
+        <img class="camera-icon" src="{% static 'static_media/photo-camera.svg' %}"/>
         <span>Agregar Logo</span>
       </div>
       <div class="absolute-icons">
           {{ form.logo }}
-
       </div>
     </div>
     {{ form.logo.errors }}
