--- a/proyecto/libelulas/static/index.css
+++ b/proyecto/libelulas/static/index.css
@@ -23,23 +23,28 @@ nav .nav-wrapper {
   background-color: #fff;
   border-radius: 20px;
   box-shadow: 0 18px 9px 0 rgba(235, 236, 239, 0.64);
-  display: flex;
   max-width: 1024px;
   width:100%;
-  padding-top: 10px;
+  padding: 24px;
 }
 
 .flex {
   display: flex;
 }
 
+@media only screen and (min-device-width: 360px) and (max-device-width: 768px) {
+  .flex {
+    flex-direction: column;
+    align-items: center;
+  }
+}
 form > .image-column {
   flex-grow: 1;
 }
 
 
 form > .form-column {
-  flex-grow: 2;
+  flex-grow: 3;
   display: flex;
   flex-direction: column;
 }
@@ -49,8 +54,6 @@ form > .form-column {
   display: flex;
   justify-content: space-between;
   margin-top: 2em;
-  max-width:18em;
-  width: 100%;
 }
 
 .cancel {
@@ -82,11 +85,12 @@ form > .form-column {
   align-items: center;
   background-image: linear-gradient(to bottom, #ff7982, #ff78b8);
   display: flex;
-  height: 100%;
+  /* height: 100%; */
   justify-content: center;
   position:relative;
-  width: 100%;
-  max-width: 250px;
+  /* width: 100%; */
+  width: 335px;
+  height: 355px;
 }
 
 .image-circle {
@@ -131,7 +135,7 @@ form  p > input {
 textarea {
   border: solid 1px #b4c0c6;
   border-radius: 20px;
-  padding: 1em;
+  padding: 5px;
 }
 
 .inputfile {
@@ -340,4 +344,3 @@ p {
 .red-background {
   background-image: linear-gradient(to bottom, #ff7a80, #ff78be);
 }
-
