Editar Jugadora Completado: -Carga el equipo en que pertenece -Se puede cambiar el equipo a que pertenece

--- a/proyecto/libelulas/jugadora/templates/jugadora/editar_jugadora.html
+++ b/proyecto/libelulas/jugadora/templates/jugadora/editar_jugadora.html
@@ -69,6 +69,13 @@
       </p>
       {{ form.Posicion.errors }}
       <p>
+          <label>
+              {{ form.equipo.label_tag }}
+          </label>
+          {{ form.equipo }}
+      </p>
+           {{ form.equipo.errors }}
+      <p>
         <label>
           {{ form.Notas.label_tag }}
         </label>
